--- a/about/el.html
+++ b/about/el.html
@@ -56,6 +56,9 @@
                 Τα κύρια ενδιαφέροντά μου κυμαίνονται στα γραφικά, τα παιχνίδια, τον προγραμματισμό χαμηλού επιπέδου και τις προσομοιώσεις.
             </p>
             <p>
+                Αλλα ενδιαφέροντα είναι η μουσική, ηλεκτρονική, ορχηστρική και μέταλ, η γλωσσολογία και η κατασκευή κόσμων. Ζωγραφίζω επίσης, πού και πού.
+            </p>
+            <p>
                 Εδώ θα παραθέτω κυρίως πρότζεκτ μου τα οποία θεωρώ ενδιαφέροντα ή χρήσιμα. Ίσως φτιάξω ιστολόγιο στο μέλλον, αλλά δεν είμαι σίγουρος.
             </p>
             </div>
