--- a/about/en.html
+++ b/about/en.html
@@ -56,6 +56,9 @@
                     Current areas of interest have to do with graphics, perhaps game development, simulations and low level stuff. I am also familiar with Linux.
                 </p>
                 <p>
+                    Other interests include music, orchestrated, electronic and metal, linguistics and worldbuilding. I also like to draw from time to time.
+                </p>
+                <p>
                     This site is mainly for listing my projects. I may consider making something like a blog, but I haven't put much thought into it yet.
                 </p>
                 </div>
