--- a/el.html
+++ b/el.html
@@ -41,7 +41,7 @@
         </div>
         <div class="sections">
             <h2 class="section">ΠΡΟΤΖΕΚΤ</h2>
-            <h2 class="section"><a href="About/el.html">ΠΕΡΙ</a></h2>
+            <h2 class="section"><a href="about/el.html">ΠΕΡΙ</a></h2>
         </div>
         <div class="card">
             <div class="name"><a href="https://github.com/xmamalou/science-tex.git"><h3>Science-Tex</h3></a>
