--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="sections">
             <h2 class="section">PROJECTS</h2>
-            <h2 class="section"><a href="About/en.html">ABOUT</a></h2>
+            <h2 class="section"><a href="about/en.html">ABOUT</a></h2>
         </div>
         <div class="card">
             <div class="name"><a href="https://github.com/xmamalou/science-tex.git"><h3>Science-Tex</h3></a>
