--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="Resources/charliefav.png">
         <link rel="stylesheet" type="text/css" href="Markup/markup.css" />
         <title>Welcome! - Mantis</title>
