--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Welcome! - Mantis</title>
         <style> 
             footer {
+                bottom: 0;
                 text-align: center;
                 background-color: black;
                 color: white;
@@ -32,6 +33,34 @@
                 margin-right: 20px;
                 margin-top: 10px;
                 margin-bottom: 10px;
+            }
+
+            .flag {
+                width: 40px; 
+                height: 40px;
+            }
+
+            
+            @media screen and (max-width: 1023px) {
+                .foottext {
+                    font-size: 10pt;
+                    /* set position to center*/
+                    text-align: center;
+                }  
+
+                footer {
+                    grid-template-columns: unset;
+                }
+
+                /* set the flags to be on top of each other */
+                .languages {
+                    size: 20pt;
+                }
+
+                .flag {
+                    width: 90px;
+                    height: 90px;
+                }
             }
         </style>
     </head>
@@ -63,8 +92,8 @@
     <footer class=".footer">
         <p class="foottext">Physics connoisseur. Math enthusiast. C and Haskell enjoyer. Professionally unprofessional.</p>
         <div class="languages">
-            <a href="el.html"><img src="Resources/greek.png" width="40px" height="40px"></a>
-            <a href=""><img src="Resources/english.png" width="40px" height="40px"></a>
+            <a href="el.html"><img class="flag" src="Resources/greek.png" ></a>
+            <a href=""><img class="flag" src="Resources/english.png"></a>
         </div>
     </footer>
 </html>
