--- a/el.html
+++ b/el.html
@@ -82,6 +82,7 @@
         </div>
         <div class="sections">
             <h2 class="section">ΠΡΟΤΖΕΚΤ</h2>
+            <h2 class="section"><a href="blog/el.html">ΙΣΤΟΛΟΓΙΟ</a></h2>
             <h2 class="section"><a href="about/el.html">ΠΕΡΙ</a></h2>
         </div>
         <div class="card">
