--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
                 <div class="titlstring"><a href="index.html"><img src="Resources/mantis.png" alt="title img" width="500px" height="100px"></a></div>
             </div>
         </div>
-        <div class="sections">
+        <div class="sections-en">
             <h2 class="section">PROJECTS</h2>
+            <h2 class="section"><a href="blog/en.html">BLOG</a></h2>
             <h2 class="section"><a href="about/en.html">ABOUT</a></h2>
         </div>
         <div class="card">
