--- a/el.html
+++ b/el.html
@@ -92,6 +92,20 @@
             <a href="https://github.com/xmamalou/science-tex.git"><img src="Resources/sciencetex.png" alt="title img" width="180px" height="180px" class="thumbnail"></a>
         </div>
         <div class="card">
+            <div class="name"><a href="https://github.com/xmamalou/termite.git"><h3>Termite</h3></a>
+                <p>Το Termite είναι βιβλιοθήκη για διαχείρηση μνήμης και νημάτων. Φτιάχτηκε με στόχο την απλότητα χρήσης. Χρησιμοποιεί επίσης την Vulkan για την διαχείρηση μνήμης και
+                    καρτών γραφικών. Είναι ακόμη ατελής, αλλά μπορείτε να του ρίξετε μια ματιά πατώντας την εικόνα δεξιά!
+                </p></div>
+                <a href="https://github.com/xmamalou/termite.git"><img src="Resources/termite.png" alt="title img" width="180px" height="180px" style="float:left;" class="thumbnail"></a>
+        </div>
+        <div class="card">
+            <div class="name"><a href="https://github.com/xmamalou/dragonfly.git"><h3>Dragonfly</h3></a>
+                <p>To Dragonfly είναι μηχανή γραφικών και φυσικής γραμμένη σε C. Χρησιμοποιεί την Vulkan και την GLFW. Έχει στόχο την απλότητα αλλά και την προσαρτησιμότητα σε άλλες γλώσσες
+                    ή πρότζεκτ. Είναι ακόμη ατελής, αλλά μπορείτε να του ρίξετε μια ματιά πατώντας την εικόνα δεξιά!
+                </p></div>
+                <a href="https://github.com/xmamalou/dragonfly.git"><img src="Resources/dragonfly.jpg" alt="title img" width="180px" height="180px" style="float:left;" class="thumbnail"></a>
+        </div>
+        <div class="card">
             <div class="name"><a href="https://github.com/xmamalou/vector-tensor-booklet.git"><h3>Στοιχεία Γραμμικής Άλγεβρας (Ατελές)</h3></a>
                 <p>Μάθετε τα βασικά της γραμμικής άλγεβρας με αυτό το συνεκτικό πλην αναλυτικό βιβλιαράκι. Γραμμένο στα Ελληνικά, με επισήμανση της ξένης ορολογίας. Πατήστε την εικόνα δεξιά και διαβάστε το!</p></div>
                 <a href="https://github.com/xmamalou/vector-tensor-booklet.git"><img src="Resources/vector.png" alt="title img" width="180px" height="180px" style="float:left;" class="thumbnail"></a>
