--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
             <a href="https://github.com/xmamalou/science-tex.git"><img src="Resources/sciencetex.png" alt="title img" width="180px" height="180px" class="thumbnail"></a>
         </div>
         <div class="card">
+            <div class="name"><a href="https://github.com/xmamalou/termite.git"><h3>Termite</h3></a>
+                <p>Termite is a library for memory and thread management. It's made to be simple to use and also integrates 
+                    Vulkan for GPU memory management and usage. It's still in development, but you can check it out by clicking the image on the right!
+                </p></div>
+                <a href="https://github.com/xmamalou/termite.git"><img src="Resources/termite.png" alt="title img" width="180px" height="180px" style="float:left;" class="thumbnail"></a>
+        </div>
+        <div class="card">
+            <div class="name"><a href="https://github.com/xmamalou/dragonfly.git"><h3>Dragonfly</h3></a>
+                <p>Dragonfly is a rendering and physics engine, designed to be small and simple to use. It's written in C but allows easy integration with other languages.
+                    It uses Vulkan and GLFW. It's still in development, but you can check it out by clicking the image on the right!
+                </p></div>
+                <a href="https://github.com/xmamalou/dragonfly.git"><img src="Resources/dragonfly.jpg" alt="title img" width="180px" height="180px" style="float:left;" class="thumbnail"></a>
+        </div>
+        <div class="card">
             <div class="name"><a href="https://github.com/xmamalou/vector-tensor-booklet.git"><h3>Linear Algebra Fundamentals (Incomplete)</h3></a>
                 <p>Learn the basics of abstract linear algebra with this thorough and conscise guide. Only available in Greek for now, but an English version is planned!
                     Check it out by clicking the image on the right!</p></div>
