--- a/404.html
+++ b/404.html
@@ -93,6 +93,12 @@
                     padding-bottom: 10px;
                 }
             }
+
+            @media (min-width: 2200px) {
+                .box {
+                    margin-left: 35%;
+                }
+            }
         </style>
     </head>
     <body>
