Fixed reference to asset

--- a/404.html
+++ b/404.html
@@ -8,11 +8,11 @@
         <style>
             @font-face {
                 font-family: 'Iosevka Custom';
-                src: url('./src/assets/font/myosevka-regular.ttf');
+                src: url('/src/assets/font/myosevka-regular.ttf');
             }
 
             body {
-                background-image: url('./src/assets/motif_small.png');
+                background-image: url('https://cyber-mantid.xyz/src/assets/motif_small.png');
             }
 
             h1 {
